--- a/front_end_toyota/src/index.css
+++ b/front_end_toyota/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+.render_blog {
+    img {
+        width        : 100%;
+        border-radius: 10px;
+        max-height   : 500px;
+        object-fit   : cover;
+    }
+}
